# jormundgandr

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
src/jormungandr/: __init__.py  a.py  b.py
tests/: test_example.py
