[project]
name = "jormungandr"
version = "0.0.1"
description = "Jormungandr is an novel end-to-end video object detection system that leverages the Spatial-Temporal Mamba architecture to accurately detect and track objects across video frames."
readme = "README.md"
authors = [
    { name = "Sverre Nystad", email = "sverrenystad@gmail.com" },
    { name = "Kristoffer Nohr Olaisen", email = "66872548+Knolaisen@users.noreply.github.com" }
]
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
jormungandr = "jormungandr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
